fix repository number not showing more than 30 repositories and responsive design

--- a/src/components/Footer/styles.css
+++ b/src/components/Footer/styles.css
@@ -26,4 +26,10 @@ p.disclaimer {
   footer {
     padding: 40px 20px !important;
   }
+  span {
+    font-size: 1rem;
+  }
+  p.disclaimer {
+    font-size: 0.7rem;
+  }
 }
